# streamer-rs

./: CLAUDE.md  Cargo.toml  README.md
examples/: player.rs
src/: codec.rs  decoder.rs  encoder.rs  error.rs  frame.rs  lib.rs  pipeline.rs  sink.rs  source.rs  transform.rs
src/backends/: mod.rs
src/backends/gstreamer/: decoder.rs  encoder.rs  frame.rs  mod.rs  multi_source.rs  pipeline.rs  sink.rs  source.rs  utils.rs
